--- a/w7/app/src/main/AndroidManifest.xml
+++ b/w7/app/src/main/AndroidManifest.xml
@@ -13,8 +13,21 @@
         android:theme="@style/Theme.Week7"
         tools:targetApi="31">
         <activity
+            android:name=".FilterActivityWeb"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ThirdActivity"
-            android:exported="false" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".SecondActivity"
             android:exported="false" />
