--- a/w4/app/src/main/AndroidManifest.xml
+++ b/w4/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Week4"
         tools:targetApi="31">
         <activity
+            android:name=".LinearActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".LinearActivity1"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
