--- a/w10/app/src/main/AndroidManifest.xml
+++ b/w10/app/src/main/AndroidManifest.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.week10">
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
     <application
-        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,17 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Week9"
+        android:theme="@style/Theme.Week10"
         tools:targetApi="31">
-        <activity
-            android:name=".SQLiteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ExternalStorageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".InternalStorageActivity"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
