--- a/w11/app/src/main/AndroidManifest.xml
+++ b/w11/app/src/main/AndroidManifest.xml
@@ -2,13 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
-        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,16 +13,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Week9"
+        android:theme="@style/Theme.Week11"
         tools:targetApi="31">
         <activity
-            android:name=".SQLiteActivity"
+            android:name=".AidlActivity"
             android:exported="false" />
+
+        <service
+            android:name=".AidlService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.example.week11.MyAidlInterface" />
+            </intent-filter>
+        </service>
+
         <activity
-            android:name=".ExternalStorageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".InternalStorageActivity"
+            android:name=".BoundActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -36,6 +40,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ForegroundActivity"
+            android:exported="true" />
+
+        <service android:name=".ForegroundService" />
+        <service android:name=".BoundService" />
     </application>
 
 </manifest>
